# cis410-project1

./: README.md
project1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  proj1.sln  proj1.vcxproj  proj1.vcxproj.filters
project1/Debug/: proj1.ilk
project1/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
project1/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog
project1/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
project1/proj1.dir/Debug/proj1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
